# To-Do-List

./: .env  .env.example  .gitignore  .rest  README.md  api_tests.http  db.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_api.sh  run_scheduler.sh
exceptions/: custom_exceptions.py  init.py
managers/: init.py  project_manager.py  task_manager.py
models/: project.py  task.py
postman/collections/: To_Do app.postman_collection.json
postman/environments/: To_Do app.postman_environment.json
postman/globals/: workspace.postman_globals.json
server/: .gitignore  api_tests.http  main.py  requirements.txt  run_api.sh
server/tests/: test_config.py  test_project.py  test_task.py
server/todolist_app/: alembic.ini
server/todolist_app/alembic/: env.py
server/todolist_app/api/: main.py
server/todolist_app/cli/: __init__.py
server/todolist_app/exceptions/: base.py
server/todolist_app/models/: project.py
server/todolist_app/repositories/: __init__.py  project_repository.py  task_repository.py
server/todolist_app/services/: task_service.py
server/todolist_app/utils/: config.py
tests/: test_cli.py  test_project_manager.py  test_task_manager.py  test_validators.py
todolist_app/: init.py
todolist_app/api/: __init__.py  dependencies.py  main.py
todolist_app/api/routers/: __init__.py  project_router.py  task_router.py
todolist_app/api/schemas/: __init__.py  project_schemas.py  task_schemas.py
todolist_app/cli/: main.py
todolist_app/commands/: autoclose_overdue.py  init.py
todolist_app/db/: __init__.py  base.py  session.py
todolist_app/exceptions/: __init__.py  custom_exceptions.py  repository_exceptions.py  service_exceptions.py
todolist_app/managers/: __init__.py  project_manager.py  task_manager.py
todolist_app/models/: __init__.py  project.py  task.py
todolist_app/repositories/: project_repository.py  task_repository.py
todolist_app/scheduler/: autoclose_runner.py
todolist_app/services/: __init__.py  project_service.py  task_service.py
todolist_app/utils/: __init__.py  config.py  validators.py
utils/: config.py  init.py  validators.py
(+4 files in other folders)
